--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Combining Varibables, data types, and Operators</title>
+    <title>Combining Variables, data types, and Operators</title>
 </head>
 <body>
     <h1>Hello World</h1>
